tests/requests/snapshots/can_auth_with_magic_link@auth_request.snap
---
source: tests/requests/auth.rs
expression: magic_link_response.text()
---
"{\"success\":true,\"code\":\"OK\",\"message\":\"ok\",\"data\":{\"token\":\"TOKEN\",\\"refresh_token\\":\\"REFRESH_TOKEN\\",\"pid\":\"PID\",\"name\":\"user1\",\"is_verified\":false}}"
