tests/requests/snapshots/can_login_without_verify@auth_request.snap
---
source: tests/requests/auth.rs
expression: login_response.text()
---
"{\"success\":true,\"code\":\"OK\",\"message\":\"ok\",\"data\":{\"token\":\"TOKEN\",\\"refresh_token\\":\\"REFRESH_TOKEN\\",\"pid\":\"PID\",\"name\":\"loco\",\"is_verified\":false}}"
