tests/requests/snapshots/can_reset_password@auth_request.snap
---
source: tests/requests/auth.rs
expression: reset_response.text()
---
"{\"success\":true,\"code\":\"OK\",\"message\":\"ok\",\"data\":{}}"
