tests/requests/snapshots/login_with_valid_password@auth_request.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"success\":true,\"code\":\"OK\",\"message\":\"ok\",\"data\":{\"token\":\"TOKEN\",\\"refresh_token\\":\\"REFRESH_TOKEN\\",\"pid\":\"PID\",\"name\":\"loco\",\"is_verified\":true}}",
)
